qpa: Handle compositor restarts in EGLPlatformContext

If the compositing has been restarted, the global share context will be
destroyed and we no longer can receive framebuffer objects from internal
windows. From user's perspective, it can be seen as tabbox not working
anymore.

We need to mark QOpenGLContext objects as invalid so QtQuick machinery
can re-create all OpenGL related resources, e.g. textures, etc.

BUG: 415798
FIXED-IN: 5.20.1